<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Npuzzle10446982</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="afbeelding">Kies zelf een afbeelding!</string>
    <string name="firstimage">First Image</string>
    <string name="secondimage">Second Image</string>
    <string name="Thirdimage">Thirdimage</string>
    <string name="title_activity_activity2">Activity2</string>
    <string name="Werkt">Werkt het?!</string>
    <string name="title_activity_activity3">Activity3</string>
    <string name="Menu">Menu</string>
    <string name="resumebutton">Resume game</string>
    <string name="difficultybutton">Difficulty</string>
    <string name="Picturebutton">Pictures</string>
    <string name="resetbutton">Reset puzzle</string>
    <string name="kippetje">Kippetje</string>
    <string name="teruggaan">Terug gaan</string>
    <string name="title_activity_activity4">Activity4</string>
    <string name="resume">Resume</string>
    <string name="title_activity_activity5">Activity5</string>
    <string name="difficulty">difficulty</string>
    <string name="pbutton">Pictures</string>
    <string name="reset">Reset puzzle</string>
    <string name="desc">desc</string>
    <string name="tekst1">Op deze pagina moet de daadwerkelijke app verschijnen. Voor nu is er nog even niks anders dan een menu button en deze tekst.</string>
    <string name="difficulty2">Difficulty</string>
    <string name="easy">Easy mode (3 x 3)</string>
    <string name="medium">Medium mode (4 x 4)</string>
    <string name="hard">Hard mode (5 x 5)</string>
    <string name="title_activity_victory">VictoryActivity</string>

</resources>
