<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sam.npuzzle10446982.DifficultyActivity"
    android:background="@drawable/background2">

    <TextView android:text="@string/difficulty2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:id="@+id/textView2"
        android:textColor="#ff6abbff"/>

    <Button
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:text="@string/easy"
        android:id="@+id/Easybutton"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"/>

    <Button
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:text="@string/medium"
        android:id="@+id/Mediumbutton"
        android:layout_below="@+id/Easybutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"/>

    <Button
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:text="@string/hard"
        android:id="@+id/Hardbutton"
        android:layout_below="@+id/Mediumbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"/>

</RelativeLayout>
